tweaked css & html

--- a/index.html
+++ b/index.html
@@ -33,20 +33,32 @@
             </div>
 
             <div class="info">
-                <div class="second-text">Some random information.</div>
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext uder an illustration or image</div>
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext uder an illustration or image</div>
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext uder an illustration or image</div>
-                <div class="box"></div>
-                <div class="sub-text">this is some subtext uder an illustration or image</div>
+                
+                    <div class="second-text">Some random information.</div>
+                <div class="info-sub">
+                <div class="outer-box">
+                    <div class="box"></div>
+                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                </div>
+                <div class="outer-box">
+                    <div class="box"></div>
+                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                </div>
+                <div class="outer-box">
+                    <div class="box"></div>
+                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                </div>
+                <div class="outer-box">
+                    <div class="box"></div>
+                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                </div>
+                </div>
+            </div>
             </div>
 
             <div class="quote">
-                <div class="guote-txt">!! INSERT QUOTE HERE</div>
-                <div class="quote-author">-Someone</div>
+                <div class="quote-txt"><em>"This was one of the best parts of being a coder, and an artist: the thrill of being in the middle of creating something delightful. It’s like the anticipation of eating freshly baked bread after its aroma fills the room."</em></div>
+                <div class="quote-author">- Dr. Joy Buolamwini</div>
             </div>
 
             <div class="action-call">
