added finishing touches to css, might need further changes but is finished for now

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Landing Page Project</title>
         <link rel="stylesheet" href="styles.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+            </style>
     </head>
 
     <body>
@@ -38,19 +41,19 @@
                 <div class="info-sub">
                 <div class="outer-box">
                     <div class="box"></div>
-                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                    <div class="sub-text2">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="outer-box">
                     <div class="box"></div>
-                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                    <div class="sub-text2">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="outer-box">
                     <div class="box"></div>
-                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                    <div class="sub-text2">this is some subtext under an illustration or image</div>
                 </div>
                 <div class="outer-box">
                     <div class="box"></div>
-                    <div class="sub-text2">this is some subtext uder an illustration or image</div>
+                    <div class="sub-text2">this is some subtext under an illustration or image</div>
                 </div>
                 </div>
             </div>
@@ -63,9 +66,13 @@
 
             <div class="action-call">
                 <div class="action-call-box">
+                    <div class="ac-text">
                     <div class="third-text">Call to action! It's Time!</div>
-                    <div class="sub-text-alt">Sign up for our product by clicking that button right over there!</div>
+                    <div class="sub-text">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <div class="ac-button">
                     <div class="button-alt">Sign up</div>
+                </div>
                 </div>
             </div>
 
